# unet

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
data/DIC-C2DH-HeLa/01_ERR_SEG/: mask000.tif  mask001.tif  mask002.tif  mask003.tif  mask004.tif  mask005.tif  mask006.tif  mask007.tif  mask008.tif  mask009.tif  mask010.tif  mask011.tif  mask012.tif  mask013.tif  mask014.tif  mask015.tif  mask016.tif  mask017.tif  mask018.tif  mask019.tif  mask020.tif  mask021.tif  mask022.tif  mask023.tif  mask024.tif  mask025.tif  mask026.tif  mask027.tif  mask028.tif  mask029.tif  mask030.tif  mask031.tif  mask032.tif  mask033.tif  mask034.tif  mask035.tif  mask036.tif  mask037.tif  mask038.tif  mask039.tif  (+44 more)
data/DIC-C2DH-HeLa/02_ERR_SEG/: mask000.tif  mask001.tif  mask002.tif  mask003.tif  mask004.tif  mask005.tif  mask006.tif  mask007.tif  mask008.tif  mask009.tif  mask010.tif  mask011.tif  mask012.tif  mask013.tif  mask014.tif  mask015.tif  mask016.tif  mask017.tif  mask018.tif  mask019.tif  mask020.tif  mask021.tif  mask022.tif  mask023.tif  mask024.tif  mask025.tif  mask026.tif  mask027.tif  mask028.tif  mask029.tif  mask030.tif  mask031.tif  mask032.tif  mask033.tif  mask034.tif  mask035.tif  mask036.tif  mask037.tif  mask038.tif  mask039.tif  (+44 more)
src/: model.py  train.py
src/dataset/: __init__.py  c2dh.py  display.py  em.py  transforms.py
